# lumina_iq

./: Dockerfile  FINAL_FIX_COMPLETE.md  FIXES_SUMMARY_Nov_04_2025.md  Procfile  REDIS_CONFIGURATION.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_FIX.txt  STARTUP_FIXES_SUMMARY.md  architecture_design.md  docker-compose.yml  document_tracking.db  pyproject.toml  redis.conf  render.yaml  start_render.sh
.roo/: mcp.json
backend/: .env.development  .env.example  .env.production  .env.staging  ALL_FIXES_SUMMARY.md  CHAT_FIX.md  CHAT_MODE_FIX.md  EMBEDDING_OPTIMIZATIONS.md  IMPLEMENTATION_SUMMARY.md  QDRANT_INDEX_FIX.md  QUESTION_GENERATION_FIX.md  cleanup_duplicate_pdfs.py  deploy.py  document_tracking.db  gunicorn.conf.py  inspect_qdrant_data.py  main.py  requirements.txt  run.py  start.sh  stop.sh  test_chunking.py  test_services.py
backend/config/: production_settings.py  settings.py
backend/lumina_iq.egg-info/: PKG-INFO  entry_points.txt
backend/routes/: __init__.py  auth.py  chat.py  health.py
backend/services/: README.md  __init__.py  advanced_rag_service.py  auth_service.py  cache_service.py  celery_service.py  chat_service.py  chunking_service.py  document_metadata_extractor.py  document_service.py  document_tracking_service.py  embedding_service.py  generation_service.py  health_service.py  ingestion_service.py  llamaindex_service.py  pdf_service.py  qa_generation_service.py  qdrant_service.py  query_classifier.py  rag_orchestrator.py  rag_service.py  retrieval_strategy_manager.py  search_service.py  semantic_cache.py  together_service.py
backend/tasks/: __init__.py  cache_tasks.py  celery_app.py  document_tasks.py  rag_tasks.py
backend/utils/: cache.py  file_hash.py  ip_detector.py  logger.py  logging_config.py  nltk_init.py  suppress_warnings.py
docs/: llamaindex_rag_docs.html
frontend/: .env  package-lock.json  package.json
frontend/src/app/answer-questions/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/notes/: page.tsx
frontend/src/app/qa/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: DataCleaner.tsx
frontend/src/lib/: api.ts  auth.ts
lumina_iq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
